--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <link rel = "stylesheet" href = "style.css">
     </head>
     <body>
+        <header>
         <h1>Discover hidden places in the world and around you</h1>
         <a href = "#">Download Excursion(Comming soon!)</a>
+        </header>
     </body>
 </html>
