--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <link rel = "stylesheet" href = "style.css">
     </head>
     <body>
-        <div class = "header">
         <h1>Discover hidden places in the world and around you</h1>
+        <div class = d-link>
         <a href = "#">Download Excursion(Comming soon!)</a>
         </div>
     </body>
