--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Excursion</title>
-        <link rel = "stylesheet" href = "style.css">
+        <link rel = "stylesheet" href = "resources/style.css">
     </head>
     <body>
         <h1>Discover hidden places in the world and around you</h1>
