--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <div class = d-link>
         <a href = "#">Download Excursion(Comming soon!)</a>
         </div>
+        <video src = "resources\videos\excursion.mp4">
     </body>
 </html>
