--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <div class = d-link>
         <a href = "#">Download Excursion(Comming soon!)</a>
         </div>
-        <video autoplay muted loop src = "resources\videos\excursion.mp4">
+        <video autoplay muted loop src = "resources\videos\excursion.mp4">    
+        <h1>Your personal travel guide</h1>
     </body>
 </html> 
