--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <h1>Discover hidden places in the world and around you</h1>
-        <h1 class = "guide"></h1>
         <div class = d-link>
         <a href = "#">Download Excursion(Comming soon!)</a>
         </div>   
-        <video autoplay muted loop src = "resources\videos\excursion.mp4"> 
+        <video autoplay muted loop src = "resources\videos\excursion.mp4"></video> 
+        <h1>Your personal travel guide</h1>
     </body>
 </html> 
