--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <a href = "#">Download Excursion(Comming soon!)</a>
         </div>   
         <video autoplay muted loop src = "resources\videos\excursion.mp4"></video> 
-        <h1>Your personal travel guide</h1>
+        <h1 class = main>Your personal travel guide</h1>
     </body>
 </html> 
