--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
         </div>   
         <video autoplay muted loop src = "resources\videos\excursion.mp4"></video> 
         <div class = main>Your personal travel guide</div>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <img class = "demo" src = "resources/imgs/camp.jpg"/>
+        <img class = "logo" src = "resources/imgs/phone.png"/>
     </body>
 </html> 
