--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel = "stylesheet" href = "resources/style.css">
     </head>
     <body>
-        <h1>Discover hidden places in the world and around you</h1>
+        <h1 id = "heading">Discover hidden places in the world and around you</h1>
         <div class = d-link>
         <a href = "#">Download Excursion(Comming soon!)</a>
         </div>   
@@ -13,6 +13,13 @@
         <div class = main>Your personal travel guide</div>
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
         <img class = "demo" src = "resources/imgs/camp.jpg"/>
-        <img class = "logo" src = "resources/imgs/phone.png"/>
+        <img class = "logo" src = "resources/imgs/phone.png"/>    
+        <h1 class = "final">Coming Soon for iPhone and Android</h1>
+        <div class =  final-d-link>
+        <a href = "#heading">Download Excursion(Comming soon!)</a>
+        </div>
+        <div class = "copyrights">
+        <h2>© Excursion</h2>
+        </div>
     </body>
 </html> 
